# ProjectWayward

./: CMakeLists.txt  cmake  make
SFML-App/: AirborneMoveState.cpp  AirborneMoveState.hpp  AirborneNeutralState.cpp  AirborneNeutralState.hpp  AirborneState.hpp  AirdodgeState.cpp  AirdodgeState.hpp  BlankEntity.hpp  CameraController.hpp  Character.cpp  Character.hpp  CharacterProperties.hpp  CharacterState.hpp  Character_state.cpp  DashState.cpp  DashState.hpp  Entity.hpp  GameController.cpp  GameController.hpp  GroundedState.hpp  HitboxData.cpp  HitboxData.hpp  JumpsquatState.cpp  JumpsquatState.hpp  (+20 more)
SFML-App.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  TextureV.cpp  TextureV.hpp  logs.cc  main.cc  main.cpp  resources.cc  ww_math.cc
src/Game/: AbstractGameController.hpp  CMakeLists.txt  CameraController.cpp  CameraController.hpp  Entity.cc  Entity.h  GameController.cc  GameController.cpp  GameController.h  GameController.hpp  Input.cc  Input.h  MathHelper.cpp  MathHelper.hpp  PhysicsEngine.cc  PhysicsEngine.h  PlayerInput.cpp  PlayerInput.hpp  RogueController.cpp  RogueController.hpp
src/Game/Character/: CMakeLists.txt  Character.cpp  Character.hpp  CharacterProperties.hpp  Character_state.cpp
src/Game/Character/CharacterState/: CMakeLists.txt  CharacterState.hpp
src/Game/Character/CharacterState/Airborne/: AirborneNeutralState.cpp  AirborneNeutralState.hpp  AirborneScriptState.cpp  AirborneScriptState.hpp  AirborneState.hpp  AirdodgeState.cpp  AirdodgeState.hpp  CMakeLists.txt  HitlagState.cpp  HitlagState.hpp  HitstunState.cpp  HitstunState.hpp
src/Game/Character/CharacterState/Grounded/: CMakeLists.txt  DashState.cpp  DashState.hpp  GroundedScriptState.cpp  GroundedScriptState.hpp  GroundedState.hpp  JumpsquatState.cpp  JumpsquatState.hpp  LandingLagState.cpp  LandingLagState.hpp  NeutralState.cpp  NeutralState.hpp  TurnaroundState.cpp  TurnaroundState.hpp
src/Game/Entities/: BlankEntity.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  HitboxData.cpp  HitboxData.hpp  PlatformEntity.hpp  ProjectileEntity.cpp  ProjectileEntity.hpp  StageEntity.hpp
src/Game/Loaders/: CMakeLists.txt  MoveLoader.cpp  MoveLoader.hpp  ResourcePath.cpp  ResourcePath.hpp  SpriteLoader.cpp  SpriteLoader.hpp
src/Game/Physics/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.hpp
src/Game/entities/: Chunk.cc  Chunk.h  Entity.cc  Entity.h  Player.cc  Player.h
src/Game/state/: AirborneState.cc  AirborneState.h  Attributes.h  GroundedState.cc  GroundedState.h  PlayerState.h
src/Generator/: CMakeLists.txt  Chunks.cpp  Chunks.hpp  Generator.cpp  Generator.hpp  LevelData.cpp  LevelData.hpp
src/MSL/: CMakeLists.txt  Msl.hpp  MslInterpreter.cpp  MslInterpreter.hpp  MslInterpreter_visitor.cpp  MslParser.cpp  MslParser.hpp  MslScanner.cpp
src/MSL/AST/: ASTPrintVisitor.h  ASTVisitor.h  CMakeLists.txt  Func.h
src/MSL/AST/Expressions/: CMakeLists.txt  Divide.h  Expression.h  Negate.h  Plus.h
src/MSL/AST/Statements/: AssignStatement.h  CMakeLists.txt  FunctionCall.h  Statement.h  SwitchStatement.h
src/MathHelper/: CMakeLists.txt  MathHelper.cpp  MathHelper.h  Random.cpp  Random.h
src/Network/: CMakeLists.txt  NetworkController.cpp  NetworkController.hpp
src/Resources/Moves/: Dair.msl  Dtilt.msl  Fair.msl  Fspecial.msl  Ftilt.msl  Jab.msl  Rocket.msl  Uair.msl  Utilt.msl
src/ScriptingLanguage/: Msl.hpp  MslInterpreter.cpp  MslParser.hpp  MslScanner.cpp  MslScanner.hpp
src/ScriptingLanguage/AST/: ASTVisitor.h  Func.h
src/ScriptingLanguage/AST/Expressions/: StringLiteral.h
src/ScriptingLanguage/AST/Statements/: Block.h
src/Setup/: MathHelper.hpp
src/Setup/Input/: PlayerInput.hpp
src/app/: main.cc  resource_path.cc
src/ecs/: CMakeLists.txt  components.cc  coordinator.cc  entities.cc
src/flowers/: CMakeLists.txt  FlowerGenerator.cc  FlowerGenerator.h  FlowerTextureGenerator.cc
src/game/: CMakeLists.txt  ChunkController.cc  ChunkController.h  GameController.cc  GameController.h  Input.cc  Input.h  PhysicsController.cc  PhysicsController.h  PhysicsEngine.cc  PhysicsEngine.h  PhysicsMultithreader.cc  PhysicsMultithreader.h  PhysicsTypes.h  controller.cc  graphics.cc  graphics_system.cc  physics.cc  physics_system.cc  playerinput.cc  playerinput_system.cc  systems.cc
src/game/entities/: Chunk.cc  Chunk.h  CrushBlock.cc  CrushBlock.h  Entity.cc  Entity.h  Explosive.cc  Explosive.h  PhysicsBitmask.h  Player.cc  Player.h
src/game/fluids/: WaterBall.h  WaterEntity.cc  WaterEntity.h
src/game/state/: AirborneState.cc  AirborneState.h  GroundedState.cc  GroundedState.h  PlayerState.cc  PlayerState.h
src/generator/: CMakeLists.txt  Chunks.cc  Chunks.h  GenOptions.cc  GenOptions.h  Generator.cc  Generator.h  LevelData.cc  LevelData.h
src/graphics/: CMakeLists.txt  MetaballBuffer.cc  MetaballBuffer.h  Renderer.cc  Renderer.h  ResourceManager.cc  ResourceManager.h  Shader.cc  Shader.h  ShaderLoader.cc  ShapeBuffer.cc  ShapeBuffer.h  SpriteBuffer.cc  SpriteBuffer.h  TextureLoader.cc  TextureLoader.h  WaywardGL.cc  WaywardGL.h  graphics.cc  shaders.cc  textures.cc
src/imgui/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_sdl.cpp
src/imgui/libs/gl3w/GL/: CMakeLists.txt  gl3w.c
src/imgui/libs/glfw/include/GLFW/: CMakeLists.txt
src/include/: ww_generator.h  ww_math.h  ww_memory.h
src/include/glad/: glad.h
src/input/: CMakeLists.txt  buttons.cc  input.cc
src/math/: CMakeLists.txt  fp_overloads.h  random.cc  random.h  vector_overloads.h  ww_math.cc  ww_math.h
src/memory/: CMakeLists.txt  StackAllocator.cc  StackAllocator.h
src/network/: CMakeLists.txt  input_buffer.h  messages.h  network_controller.cc  network_controller.h  rbnetwork.cc  udp_socket.cc  udp_socket.h
src/physics/: CMakeLists.txt  physics.cc
src/resources/: basic-noatlas.frag  basic.frag  basic.geom  basic.vert  circle_metaball.frag  metaball.frag  metaball.vert  shape.frag  shape.geom  stem.frag  stem.vert  tile.frag  tile.vert
src/test/: CMakeLists.txt  MathHelperTest.cpp  Tests.hpp
src/util/: CMakeLists.txt  glad.c  logs.cc  timer.cc  timer.h  ww_math.cc
(+97 files in other folders)
